; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/vc04_services/interface/vchiq_arm/extr_vchiq_core.c_vchiq_set_service_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/vc04_services/interface/vchiq_arm/extr_vchiq_core.c_vchiq_set_service_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vchiq_service = type { i64, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@vchiq_core_log_level = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"%d: srv:%d %s->%s\00", align 1
@srvstate_names = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vchiq_service*, i32)* @vchiq_set_service_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vchiq_set_service_state(%struct.vchiq_service* %0, i32 %1) #0 {
  %3 = alloca %struct.vchiq_service*, align 8
  %4 = alloca i32, align 4
  store %struct.vchiq_service* %0, %struct.vchiq_service** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @vchiq_core_log_level, align 4
  %6 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %7 = getelementptr inbounds %struct.vchiq_service, %struct.vchiq_service* %6, i32 0, i32 2
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %12 = getelementptr inbounds %struct.vchiq_service, %struct.vchiq_service* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i32*, i32** @srvstate_names, align 8
  %15 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %16 = getelementptr inbounds %struct.vchiq_service, %struct.vchiq_service* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds i32, i32* %14, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** @srvstate_names, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @vchiq_log_info(i32 %5, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %13, i32 %19, i32 %24)
  %26 = load i32, i32* %4, align 4
  %27 = sext i32 %26 to i64
  %28 = load %struct.vchiq_service*, %struct.vchiq_service** %3, align 8
  %29 = getelementptr inbounds %struct.vchiq_service, %struct.vchiq_service* %28, i32 0, i32 0
  store i64 %27, i64* %29, align 8
  ret void
}

declare dso_local i32 @vchiq_log_info(i32, i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
